# app/static/swagger.yaml
@@ -196,6 +196,26 @@ paths:
         '200':
           description: Successful registration
 
+
+  /admin/login:
+    post:
+      summary: Admin Login
+      description: Logs an administrator in
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        '200':
+          description: Successful registration
+
   /admin/crops:
     post:
       summary: Add Crop
